# grit

./: .gitignore  ChangeLog.md  LICENSE  README.md  grit.cabal  ion.cabal  package.yaml  stack.yaml
app/: Builder.hs  Lexer.hs  Main.hs  Parser.hs  StringUtils.hs  Syntax.hs
app/AST/: Processor.hs  Typing.hs  Utils.hs
app/Codegen/: ASTBridge.hs  Builder.hs  Primitives.hs
