cabal-version: 1.12

name:           grit
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/IgorBeschastnov/grit#readme>
homepage:       https://github.com/IgorBeschastnov/grit#readme
bug-reports:    https://github.com/IgorBeschastnov/grit/issues
author:         Igor Beschastnov
maintainer:     beschastnovigor@gmail.com
copyright:      2019 Igor Beschastnov
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/IgorBeschastnov/grit

executable grit-exe
  main-is: Main.hs
  other-modules:
    -- Main
      Paths_grit
    -- Compiler
    , JIT
    , Lexer
    , Syntax
    , Parser
    , AST.Processor
    , AST.Utils
    , AST.Typing
    , AST.Errors
    , Codegen.Primitives
    , Codegen.Builder
    , Codegen.ASTBridge
    -- Utils
    , StringUtils
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base         >=4.7 && <5
    , containers
    , bytestring
    , utf8-string
    , text
    , data-fix
    , llvm-hs        >= 9.0.1
    , llvm-hs-pure   >= 9.0.0
    , llvm-hs-pretty >= 0.9.0.0
    , parsec         >= 3.1
    , mtl            >= 2.2
    , transformers   >= 0.5
    , haskeline      >= 0.7.5
  default-language: Haskell2010
  default-extensions: ViewPatterns

test-suite grit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_grit
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , grit
  default-language: Haskell2010
